enable google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ subtitle: 'Micro Java Web Framework'
 disqus_shortname: ''
 
 # if you use google analytics, add your tracking id here
-google_analytics_id: ''
+google_analytics_id: 'UA-60911767-1'
 
 # Enable/show navigation. There are there options:
 #   0 - always hide
