--- a/_config.yml
+++ b/_config.yml
@@ -55,3 +55,6 @@ redcarpet:
         'tables',
         'hardwrap'
     ]
+    
+# URL to demo source code
+demourl: 'https://github.com/decebals/pippo/blob/master/pippo-demo'
