--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ sections: [
     ['doc', 'Documentation'],
     ['tut', 'Tutorial'],
     ['ref', 'Reference'],
+	['mod', 'Modules'],	
     ['dev', 'Developers'],
     ['post', 'Posts']
 ]
