--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ projecturl: 'https://github.com/decebals/pippo'
 sections: [
     ['doc', 'Documentation'],
     ['tut', 'Tutorial'],
-    ['mod', 'Modules'],	
+    ['mod', 'Modules'],
     ['ref', 'Reference'],
     ['dev', 'Developers'],
     ['post', 'Posts']
@@ -35,7 +35,7 @@ baseurl: ''
 permalink: none
 
 # Syntax highlighting
-highlighter: pygments
+highlighter: rouge
 
 # Since these are pages, it doesn't really matter
 future: true
@@ -56,7 +56,7 @@ redcarpet:
         'tables',
         'hardwrap'
     ]
-    
+
 # URL to demo source code
 coreurl: 'https://github.com/decebals/pippo/blob/master/pippo-core'
 demourl: 'https://github.com/decebals/pippo-demo/blob/master'
