Use 'kramdown' instead of 'redcarpet' as markdown

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,9 @@ future: true
 exclude: ['bin', 'README.md']
 
 # Use the redcarpet Markdown renderer
-markdown: redcarpet
+# !!! Uncomment for local (Jekyll 2)
+#markdown: redcarpet
+markdown: kramdown
 redcarpet:
     extensions: [
         'no_intra_emphasis',
