Enable SEO to template

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@
 title: 'Pippo'
 subtitle: 'Micro Java Web Framework'
 
+plugins:
+  - jekyll-seo-tag
+
 # if you wish to integrate disqus on pages set your shortname here
 disqus_shortname: ''
 
